package hust.soict.globalict.aims.media.factory;

import hust.soict.globalict.aims.media.Media;

public interface MediaCreation {
	public Media createMediaFromConsole();
}
